Corrections recherche événement le plus proche Enregistrement photo sur pellicule

--- a/TestParse/en.lproj/Localizable.strings
+++ b/TestParse/en.lproj/Localizable.strings
@@ -53,6 +53,7 @@
 "UIActionSheet_Cancel" = "Cancel";
 "UIActionSheet_Delete" = "Delete";
 "UIActionSheet_Skip" = "Skip";
+"UIActionSheet_Save" = "Save";
 
 
 ///// TutorialViewController /////
