Rajout de la désactivation du hud de Recherche d’évènements… Ajout de la phrase localisée du hud.

--- a/TestParse/en.lproj/Localizable.strings
+++ b/TestParse/en.lproj/Localizable.strings
@@ -227,6 +227,7 @@
 ///// ListEvents /////
 "ListEvents_Notifs" = "Notifs : %i";
 "ListEvents_NoEvent" = "No upcoming events ...";
+"ListEvents_Searching" = "Search events...";
 
 ///// MemoriesImportViewController /////
 "MemoriesImportViewController_Title" = "Events";
