--- a/TestParse/es.lproj/Localizable.strings
+++ b/TestParse/es.lproj/Localizable.strings
@@ -227,6 +227,7 @@
 ///// ListEvents /////
 "ListEvents_Notifs" = "Notificaciones  : %i";
 "ListEvents_NoEvent" = "No hay próximos eventos ...";
+"ListEvents_Searching" = "Búsqueda eventos...";
 
 ///// MemoriesImportViewController /////
 "MemoriesImportViewController_Title" = "Eventos";
