• Intégration d’un menu Popover de sélection des Albums photos. • Changement dans la méthode de sélection de la dernière photo prise dans la Pellicule.

--- a/TestParse/fr.lproj/Localizable.strings
+++ b/TestParse/fr.lproj/Localizable.strings
@@ -250,7 +250,7 @@
 "SettingsViewController_support" = "Remarques et preuves d'amour";
 "SettingsViewController_wooventFB" = "Woovent sur Facebook";
 "SettingsViewController_CGU" = "Conditions d'utilisation";
-"SettingsViewController_disconnect" = "Deconnexion";
+"SettingsViewController_disconnect" = "Déconnexion";
 "SettingsViewController_Thanks" = "Remerciements";
 "SettingsViewController_myStats" = "Mes Statistiques";
 
